v4.9.0/_sources/generated/pcdsdevices.gauge.GaugeSetPirani.rst.txt
pcdsdevices.gauge.GaugeSetPirani
================================

.. currentmodule:: pcdsdevices.gauge

.. autoclass:: GaugeSetPirani

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - gcc (FCpt)
          - :class:`~pcdsdevices.gauge.GaugeColdCathode`
          - ``{self.prefix}:GCC:{self.index}``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.gauge.GaugeSetBase`
    
        * - gpi (FCpt)
          - :class:`~pcdsdevices.gauge.GaugePirani`
          - ``{self.prefix}:GPI:{self.index}``
          - 
          - normal
          - 
    

    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: egu
    .. automethod:: get
    .. automethod:: pressure
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    
    